2003-09-16  Carl Worth  <cworth@isi.edu>

	* configure.in (CAIRO_VERSION): Bumped to 0.1.3 for new functions:
	cairo_reference and cairo_surface_reference.

	* src/cairo_surface.c (cairo_surface_reference): Export
	cairo_surface_reference.

	* src/cairo.c (cairo_reference): Add new function to increase
	reference count of cairo_t.
	(cairo_create):
	(cairo_copy):
	(cairo_destroy): Make these functions aware of the new reference
	count.

2003-09-15  Carl Worth  <cworth@east.isi.edu>

	* configure.in: Require xrender >= 0.6.0

	* src/cairo_surface.c (_cairo_x11_surface_put_image): Make static.

2003-09-15  Carl Worth  <cworth@isi.edu>

	* src/cairo.c (cairo_restore): Fix to catch invalid restore rather
	than just catching the second invalid restore. Fix from Keith
	Packard <keithp@keithp.com>.

2003-09-12  Carl Worth  <cworth@east.isi.edu>

	* src/cairo_surface.c (cairo_surface_create_similar_solid): Don't
	try to create depth-32 pixmaps on non-Render servers.
	(_cairo_surface_push_image): Fixed massive memory leak.

2003-09-09  Carl Worth  <cworth@isi.edu>

	* configure.in (PKG_CHECK_MODULES): Updated calls to
	slim_hidden_def to track changes in slim 0.2.0.

2003-09-05  Carl Worth  <cworth@isi.edu>

	* configure.in (PKG_CHECK_MODULES): Require libic >= 0.1.1

	* src/cairo_surface.c (_create_icformat_for_visual):
	(_create_icformat_for_format): Updates for new libic interface.
	(cairo_x11_surface_put_image): Rename cairo_surface_put_image to
	cairo_x11_surface_put_image.
	(_cairo_surface_pull_image):
	(_cairo_surface_push_image): First real implementation of
	push/pull_image, (thanks for help from Graydon Hoare
	<graydon@redhat.com>). This provides support for running Cairo on
	X servers that do not have the RENDER extension. (Note: This is
	still woefully slow).

	* src/cairo_path_stroke.c (_cairo_stroker_join): Switch to
	_cairo_fixed functions.

	* src/cairo_path_bounds.c (_cairo_path_bounds): Use cairo_fixed
	rather than X macros.
