@@ -1,5 +1,8 @@
 2003-09-16  Carl Worth  <cworth@isi.edu>
 
+	* src/cairo_surface.c (cairo_surface_create_similar_solid): Fixed
+	massive pixmap leak, (at least one pixmap for every set_rgb_color)
+
 	* configure.in (CAIRO_VERSION): Bumped to 0.1.3 for new functions:
 	cairo_reference and cairo_surface_reference.
 
